<resources>
    <string name="add_server_menu">Add server</string>
    <string name="add_server_list">Add server</string>
    <string name="navigation_overview">Overview</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>
    <string name="disconnect_menu">Disconnect all</string>
    <string name="action_add_server">Add server</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="about_label">About</string>
    <string name="settings_label">Settings</string>
    <string name="join_label">Join channel</string>
    <string name="users_label">Users</string>
    <string name="channels_label">Channels</string>
    <string name="add_server_label">Add new server</string>
    <string name="edit_server_label">Edit server</string>
    <string name="server_title">Title</string>
    <string name="server_host">Host</string>
    <string name="server_port">Port</string>
    <string name="server_password">Password</string>
    <string name="server_useSSL">Use SSL</string>
    <string name="server_autoconnect">Auto connect on startup</string>
    <string name="server_channels">Channels</string>
    <string name="select_charset">Select a charset</string>
    <string name="nickname">Nickname</string>
    <string name="aliases">Aliases</string>
    <string name="ident">Ident</string>
    <string name="realname">Real Name</string>
    <string name="server">Server</string>
    <string name="authentication">Authentication</string>
    <string name="channel">Channel</string>
    <string name="channels">Channels</string>
    <string name="commands">Commands</string>
    <string name="user">User</string>
    <string name="join">Join</string>
    <string name="join_channel">Join Channel</string>
    <string name="close">Close</string>
    <string name="notify">Notify</string>
    <string name="users">Users</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="on_connect">On connect</string>
    <string name="preferences">Preferences</string>
    <string name="charset">Charset</string>
    <string name="action_save">Save</string>
    <string name="action_remove">Remove</string>
    <string name="action_add">Add</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="negative_button">No</string>
    <string name="alias_add_description">These aliases will be used if the main nickname is unavailable.</string>
    <string name="channel_add_description">These channels will be automatically joined after connect.</string>
    <string name="command_add_description">These commands will be executed after connect.</string>
    <string name="auth_description">Yaaic will authenticate you with these services after connect.</string>
    <string name="auth_nickserv">Authenticate with Nickserv</string>
    <string name="auth_nickserv_password">Nickserv password</string>
    <string name="auth_sasl">Authenticate via SASL</string>
    <string name="auth_sasl_username">SASL username</string>
    <string name="auth_sasl_password">SASL password</string>
    <string name="validation_blank_title">Title cannot be blank</string>
    <string name="validation_blank_host">Host cannot be blank</string>
    <string name="validation_invalid_port">Enter a numeric port</string>
    <string name="validation_unsupported_charset">Charset is not supported by your device</string>
    <string name="validation_title_used">There is already a server with this title</string>
    <string name="validation_blank_nickname">Nickname cannot be blank</string>
    <string name="validation_blank_ident">Ident cannot be blank</string>
    <string name="validation_blank_realname">Realname cannot be blank</string>
    <string name="validation_invalid_nickname">Invalid nickname</string>
    <string name="validation_invalid_ident">Invalid ident</string>
    <string name="only_usable_from_channel">Only usable from within a channel</string>
    <string name="only_usable_from_channel_or_query">Only usable from within a channel or a query</string>
    <string name="chat_only_form_channel">You can only chat from within a channel or a query</string>
    <string name="disconnect_info">You disconnected from %1$s.</string>
    <string name="disconnect_before_editing">Disconnect from server before editing</string>
    <string name="unknown_command">Unknown command: %1$s</string>
    <string name="command_syntax">Syntax: %1$s</string>
    <string name="invalid_number_of_params">Invalid number of params</string>
    <string name="close_server_window">You can\'t close the server window</string>
    <string name="dcc_only_send">Currently only SEND is allowed</string>
    <string name="dcc_file_not_found">File does not exist: %1$s</string>
    <string name="dcc_waiting_accept">Waiting for %1$s to accept the file transfer</string>
    <string name="text_missing">Text is missing</string>
    <string name="available_commands">Available commands:</string>
    <string name="logical_or">or</string>
    <string name="query_to_channel">You cannot open queries to channels</string>
    <string name="query_exists">Query already exists</string>
    <string name="line_missing">Line is missing</string>
    <string name="nickname_in_use">Nickname %1$s already in use</string>
    <string name="irc_login_error">Could not log into the IRC server %1$s:%2$d</string>
    <string name="could_not_connect">Could not connect to %1$s:%2$d</string>
    <string name="command_desc_amsg">Send a message to all channels</string>
    <string name="command_desc_away">Sets you away</string>
    <string name="command_desc_back">Turn off the away status</string>
    <string name="command_desc_close">Closes the current window</string>
    <string name="command_desc_dcc">Send a file to a user</string>
    <string name="command_desc_deop">Remove operator status from a user</string>
    <string name="command_desc_devoice">Remove voice status from a user</string>
    <string name="command_desc_echo">Print text to window</string>
    <string name="command_desc_help">Lists all available commands</string>
    <string name="command_desc_join">Join a channel</string>
    <string name="command_desc_kick">Kicks a user</string>
    <string name="command_desc_me">Perform an action</string>
    <string name="command_desc_mode">Change channel modes</string>
    <string name="command_desc_msg">Send a message to a channel or user</string>
    <string name="command_desc_names">Lists all users in channel</string>
    <string name="command_desc_nick">Change own nickname</string>
    <string name="command_desc_notice">Send a notice to an other user</string>
    <string name="command_desc_op">Give a user operator status</string>
    <string name="command_desc_part">Leave the current channel</string>
    <string name="command_desc_query">Open a private chat with a user</string>
    <string name="command_desc_quit">Disconnect from server</string>
    <string name="command_desc_raw">Send a raw line to the server</string>
    <string name="command_desc_topic">Show or change the current topic</string>
    <string name="command_desc_voice">Give a user voice status</string>
    <string name="command_desc_whois">Get information about a user</string>
    <string name="notification_running">Yaaic is running</string>
    <string name="notification_not_connected">Not connected</string>
    <string name="notification_connected">Connected to %1$s</string>
    <string name="notification_disconnected">Disconnected from %1$s</string>
    <string name="notification_mentions">New messages in: %1$s</string>
    <string name="message_connected">Connected to %1$s</string>
    <string name="message_now_login">Now logging in...</string>
    <string name="message_login_done">Server login done.</string>
    <string name="message_motd_suppressed">MOTD suppressed. To see it, use the ‘/motd’ command.</string>
    <string name="message_deop">%1$s deops %2$s</string>
    <string name="message_devoice">%1$s devoices %2$s</string>
    <string name="message_invite_you">%1$s invites you into %2$s</string>
    <string name="message_invite_someone">%1$s invites %2$s into %3$s</string>
    <string name="message_join">%1$s joins</string>
    <string name="message_kick">%1$s kicks %2$s</string>
    <string name="message_rename">%1$s is now known as %2$s</string>
    <string name="message_self_rename">You are now known as %1$s</string>
    <string name="message_op">%1$s ops %2$s</string>
    <string name="message_part">%1$s parts</string>
    <string name="message_quit">%1$s quits (%2$s)</string>
    <string name="message_topic">Topic: %1$s</string>
    <string name="message_topic_set">%1$s sets topic: %2$s</string>
    <string name="message_voice">%1$s voices %2$s</string>
    <string name="message_remove_channel_key">%1$s removes channel key</string>
    <string name="message_set_channel_key">%1$s sets channel key: %2$s</string>
    <string name="message_set_channel_secret">%1$s sets channel secret</string>
    <string name="message_set_channel_public">%1$s sets channel public</string>
    <string name="message_set_channel_private">%1$s sets channel private</string>
    <string name="message_set_channel_limit">%1$s sets limit: %2$s</string>
    <string name="message_remove_channel_limit">%1$s removes limit</string>
    <string name="message_set_ban">%1$s sets ban: %2$s</string>
    <string name="message_remove_ban">%1$s removes ban: %2$s</string>
    <string name="message_set_topic_protection">%1$s sets topic protection</string>
    <string name="message_remove_topic_protection">%1$s removes topic protection</string>
    <string name="message_disable_external">%1$s disables external messages</string>
    <string name="message_enable_external">%1$s enables external messages</string>
    <string name="message_set_invite_only">%1$s sets invite only</string>
    <string name="message_remove_invite_only">%1$s removes invite only</string>
    <string name="message_set_moderated">%1$s sets moderated</string>
    <string name="message_remove_moderated">%1$s removes moderated</string>
    <string name="message_disconnected">Disconnected</string>
    <string name="message_not_connected">Not connected</string>
    <string name="message_users_on_chan">Users on %1$s:</string>
    <string name="user_action_reply">Reply</string>
    <string name="user_action_query">Query</string>
    <string name="user_action_op">Op</string>
    <string name="user_action_deop">DeOp</string>
    <string name="user_action_voice">Voice</string>
    <string name="user_action_devoice">DeVoice</string>
    <string name="user_action_kick">Kick</string>
    <string name="user_action_ban">Ban</string>
    <string name="settings_connection">Connection</string>
    <string name="settings_reconnect_title">Reconnect</string>
    <string name="settings_reconnect_desc">Automatically reconnect on disconnect</string>
    <string name="settings_reconnect_interval_title">Reconnect interval</string>
    <string name="settings_reconnect_interval_desc">Number of minutes between reconnection tries</string>
    <string name="settings_reconnect_interval_dialog_title">Reconnect interval</string>
    <string name="settings_ignore_motd_title">Ignore MOTD</string>
    <string name="settings_ignore_motd_desc">Don\'t show the automatic ‘Message of the Day’ sent by the server</string>
    <string name="settings_chat">Chat</string>
    <string name="settings_icons_title">Show icons</string>
    <string name="settings_icons_desc">Show icons to highlight special events</string>
    <string name="settings_colors_title">Show colors</string>
    <string name="settings_colors_desc">Show colors to highlight special events</string>
    <string name="settings_colors_nick_title">Colorize nicknames</string>
</resources>