<?xml version="1.0" encoding="UTF-8"?><!--
Yaaic - Yet Another Android IRC Client

Copyright 2009-2013 Sebastian Kaspari

This file is part of Yaaic.

Yaaic is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Yaaic is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Yaaic.  If not, see <http://www.gnu.org/licenses/>.
-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/item_toolbar" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideInset"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:text="@string/server" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_title" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/server_title"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_host" />

                <EditText
                    android:id="@+id/host"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/server_host"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_port" />

                <EditText
                    android:id="@+id/port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/server_port"
                    android:maxLength="5"
                    android:minEms="6"
                    android:numeric="integer"
                    android:singleLine="true"
                    android:text="6667" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_password" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/server_password"
                    android:maxEms="10"
                    android:minEms="10"
                    android:password="true"
                    android:singleLine="true" />

                <CheckBox
                    android:id="@+id/autoconnect"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/server_port"
                    android:text="@string/server_port"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/useSSL"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/server_useSSL"
                    android:text="@string/server_useSSL" />
                <!-- ############################################################################ -->
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:text="@string/user" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/nickname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/nickname"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/aliases"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aliases" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ident" />

                <EditText
                    android:id="@+id/ident"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ident"
                    android:singleLine="true"
                    android:text="yaaic" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/realname" />

                <EditText
                    android:id="@+id/realname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/realname"
                    android:singleLine="true"
                    android:text="" />
                <!-- ############################################################################ -->
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:text="@string/on_connect" />

                <Button
                    android:id="@+id/authentication"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication" />

                <Button
                    android:id="@+id/channels"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/channels" />

                <Button
                    android:id="@+id/commands"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/commands" />
                <!-- ############################################################################ -->
                <TextView
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dip"
                    android:text="@string/preferences" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/charset" />

                <Spinner
                    android:id="@+id/charset"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_charset" />
                <!-- ############################################################################ -->
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/item_drawer" />

</android.support.v4.widget.DrawerLayout>