<?xml version="1.0" encoding="utf-8"?>
<!-- 
Yaaic - Yet Another Android IRC Client

Copyright 2009-2013 Sebastian Kaspari

This file is part of Yaaic.

Yaaic is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Yaaic is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Yaaic.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/join"
        android:title="@string/join_channel" />
    <item
        android:id="@+id/users"
        android:title="@string/users"
        android:icon="@drawable/actionbar_users" />
    <item
        android:id="@+id/close"
        android:title="@string/close"
        app:showAsAction="never" />
    <item
        android:id="@+id/disconnect"
        android:title="@string/disconnect"
        app:showAsAction="never" />
</menu>